# froide-scheduler

./: AUTHENTICATION.md  CHANGELOG.md  DECISIONS.md  README.md  pyproject.toml  release.sh  setup.py
.github/workflows/: ci.yml
froide_scheduler/: cloud_sql.py  signals.py  urls.py
froide_scheduler/management/commands/: check_and_shutdown_db.py
froide_scheduler/middleware/: db_wakeup.py
froide_scheduler/sso/: __init__.py  adapter.py  apps.py  settings.py  urls.py
froide_scheduler/sso/migrations/: 0001_google_socialapp.py  0002_github_socialapp.py
froide_scheduler/views/: health.py
tests/: conftest.py  settings.py  test_adapter.py  test_check_and_shutdown_db.py  test_health.py  test_middleware.py  test_signals.py
